Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Done
    • 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL)
    • N/A
    • Optimizer

    Description

      According to marko, running tests under UBSAN produces a lot of runtime failures relating to the optimizer (example output attached)

      We need to take these apart and fix them.

      How to reproduce:

      cmake -DWITH_UBSAN=ON

      ...
      run mtr like so

      UBSAN_OPTIONS=print_stacktrace=1:halt_on_error=1 ./mtr alias
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              psergei Sergei Petrunia
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.