MDEV-21341: Fix optimizer-related UBSAN failures, part #1:

Fix wrong typecast